deploy/k8s/base/allinone-miner/asset-https-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https-443-asset
  labels:
    service: miner
spec:
  entryPoints:
    - websecure # Service port expecting HTTPS
  routes:
    - match: Host(`miner.allinone.ubsv.dev`)
      kind: Rule
      services:
        - name: miner
          port: 8090  # Service port expecting HTTP
  tls:
    secretName: scaling-tls
